# alignable_takehome

./: .python-version  README.md  pyproject.toml  setup.py
cli/: main.py
emailtools/: main.py
emailtools/app/notebooks/: 2_DataVis.ipynb
emailtools/app/sql/: 1_table_setup.sql
emailtools/notebooks/: 1_EDA.ipynb  2_DataVis.ipynb  README.md
emailtools/raw_data/: session_events.csv
emailtools/settings/: config.py
emailtools/sql/: 2_events_wide.sql  3_summary.sql  upload_files.sh
tests/: cli_test.py  main_test.py  settings_test.py
user_engagement/app/notebooks/: 2_DataVis.ipynb
user_engagement/app/sql/: 3_main.sql  upload_files.sh
user_engagement/raw_data/: mailings.csv  sent_emails.csv  sessions.csv  sessions_cleaned.csv
user_engagement/settings/: __init__.py  config.py
user_engagement/sql/: 2_events_wide.sql
