[tool.poetry]
name = "alignable"
version = "0.1.0"
description = "Data Science takehome for Alignable"
authors = ["Kirk Zmijewski <kirkzmijewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
ipykernel = "^6.22.0"
psycopg2-binary = "^2.9.5"
setuptools = "^67.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
pre-commit = "^3.2.1"
poetry-dotenv = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
