[tool.poetry]
name = "emailtools"
version = "0.1.0"
description = "Data Science takehome for Alignable"
authors = ["Kirk Zmijewski <kirkzmijewski@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
emailtools = "cli.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
psycopg2-binary = "^2.9.5"
setuptools = "^67.6.1"
ipysankeywidget = "^0.5.0"
poetry-dotenv = "^0.3.0"
ipywidgets = "^8.0.6"
click = "^8.1.3"
logging = "^0.4.9.6"
loguru = "^0.6.0"
sqlalchemy = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
pre-commit = "^3.2.1"
jupyter = "^1.0.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
